--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     #clock {
       font-size: 48px;
       margin-bottom: 20px;
+      color: #1e90ff; /* 🔵 синий цвет текста часов */
     }
     button {
       font-size: 20px;
